src/test/ui/parser/issues/issue-58856-2.stderr
error: mismatched closing delimiter: `}`
  --> $DIR/issue-58856-2.rs:11:1
   |
LL |     fn how_are_you(&self -> Empty {
   |                   - unmatched opening delimiter begins here
...
LL | }
   | ^ mismatched closing delimiter

error: expected parameter name, found `->`
  --> $DIR/issue-58856-2.rs:6:26
   |
LL |     fn how_are_you(&self -> Empty {
   |                          ^^ expected parameter name

error: expected one of `)` or `,`, found `->`
  --> $DIR/issue-58856-2.rs:6:26
   |
LL |     fn how_are_you(&self -> Empty {
   |                         -^^ expected one of `)` or `,`
   |                         |
   |                         help: missing `,`

error: expected one of `->`, `where`, or `{`, found `}`
  --> $DIR/issue-58856-2.rs:11:1
   |
LL |     fn how_are_you(&self -> Empty {
   |        ----------- while parsing this `fn`
...
LL | }
   | ^ expected one of `->`, `where`, or `{`

error: associated function in `impl` without body
  --> $DIR/issue-58856-2.rs:6:5
   |
LL | /     fn how_are_you(&self -> Empty {
LL | |
LL | |
LL | |         Empty
LL | |     }
LL | | }
   | | ^- help: provide a definition for the function: `{ <body> }`
   | |_|
   | 

error[E0407]: method `how_are_you` is not a member of trait `Howness`
  --> $DIR/issue-58856-2.rs:6:5
   |
LL | /     fn how_are_you(&self -> Empty {
LL | |
LL | |
LL | |         Empty
LL | |     }
LL | | }
   | |_^ not a member of trait `Howness`

error: aborting due to 6 previous errors

For more information about this error, try `rustc --explain E0407`.
